Opened 10 years ago
Closed 10 years ago
#5444 closed defect (fixed)
raw h264 (annexb) frame rate detection (from timecode?) broken since codecpar merge
| Reported by: | Ronald S. Bultje | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | undetermined |
| Version: | git-master | Keywords: | codecpar h264 regression |
| Cc: | Michael Niedermayer | Blocked By: | |
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
bash-4.3$ ./ffmpeg -i any.264
ffmpeg version N-79371-gfc5139d Copyright (c) 2000-2016 the FFmpeg developers
built with Apple LLVM version 7.0.0 (clang-700.1.76)
configuration: --enable-gpl --samples=/Users/ronaldbultje/Movies/fate-suite-ff --enable-libvpx --enable-libx264
libavutil 55. 20.100 / 55. 20.100
libavcodec 57. 34.100 / 57. 34.100
libavformat 57. 34.100 / 57. 34.100
libavdevice 57. 0.101 / 57. 0.101
libavfilter 6. 41.100 / 6. 41.100
libswscale 4. 1.100 / 4. 1.100
libswresample 2. 0.101 / 2. 0.101
libpostproc 54. 0.100 / 54. 0.100
Input #0, h264, from '/Users/ronaldbultje/Projects/ffmpeg/x86-64-gpl/any.264':
Duration: N/A, bitrate: N/A
Stream #0:0: Video: h264 (High), yuv420p, 1280x720 [SAR 241:226 DAR 1928:1017], 25 fps, 30 tbr, 1200k tbn
ffprobe shows the correct info (probably because I typically rebuild only ffmpeg, not ffprobe, so it's using an older codebase, presumably pre-codecpar):
bash-4.3$ ./ffprobe any.264
ffprobe version N-79217-gc6c3f6a Copyright (c) 2007-2016 the FFmpeg developers
built with Apple LLVM version 7.0.0 (clang-700.1.76)
configuration: --enable-gpl --samples=/Users/ronaldbultje/Movies/fate-suite-ff --enable-libvpx --enable-libx264
libavutil 55. 19.100 / 55. 19.100
libavcodec 57. 33.100 / 57. 33.100
libavformat 57. 29.101 / 57. 29.101
libavdevice 57. 0.101 / 57. 0.101
libavfilter 6. 40.102 / 6. 40.102
libswscale 4. 1.100 / 4. 1.100
libswresample 2. 0.101 / 2. 0.101
libpostproc 54. 0.100 / 54. 0.100
Input #0, h264, from '/Users/ronaldbultje/Projects/ffmpeg/x86-64-gpl/any.264':
Duration: N/A, bitrate: N/A
Stream #0:0: Video: h264 (High), yuv420p, 1280x720 [SAR 241:226 DAR 1928:1017], 30 fps, 30 tbr, 1200k tbn, 60 tbc
Older versions (pre-codecpar) used to correctly display a framerate of 30fps. A sample file can be generated by encoding any 30fps y4m file from e.g. https://media.xiph.org/video/derf/ to raw annexb h264 using x264.
Change History (4)
comment:1 by , 10 years ago
| Keywords: | h264 regression added |
|---|---|
| Priority: | normal → important |
| Version: | unspecified → git-master |
comment:2 by , 10 years ago
| Keywords: | codecpar added |
|---|
comment:3 by , 10 years ago
| Cc: | added |
|---|---|
| Status: | new → open |
comment:4 by , 10 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Fixed in a2e6c785cec33d15d1bfde375447b1915cb30ca9
fate test is welcome!



Patch fixing this is on ML